--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,15 @@
 [metadata]
-name = {pypi_name}
-version = {version}
-author = {author}
-author_email = {author_email}
-description = {description}
+name = kabbes_ml_pipeline
+version = 0.1.0
+author = James Kabbes
+author_email = james.kabbes@gmail.com
+description = A centralized pattern for creating Machine Learning pipelines
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = {home_url}
+url = https://pypi.org/project/kabbes-ml-pipeline/
 project_urls =
-    GitHub = {github_url}
-    Documentation = {pages_url}
+    GitHub = https://github.com/jameskabbes/ml_pipeline
+    Documentation = https://jameskabbes.github.io/ml_pipeline
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
