--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-kabbes_py_starter>=0.8.0
+kabbes_py_seedlings>=0.8.0
 kabbes_parent_class>=0.5.0
 kabbes_dir_ops>=0.7.0
 kabbes_analytics_packages>=0.5.0
